Add support for variant 3 of Pioneer MIX protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@570 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1585,15 +1585,45 @@ Code.6805-C9=0A 19 42 20 10 F6 F8 00 16 08 08 01 9B 02 FB 1F \
              CD 01 83 A6 04 B7 66 A6 02 B7 58 BE 53 BF 5D CD \
              01 83 3A 58 3A 58 CD 01 8C 24 D9 81
 
-#[Pioneer MIX]
-#PID=00 7E
-#VariantName=3
-#AlternatePID=01 7F
-#Code.S3C80=40 84 62 8B 12 A5 44 08 08 01 12 00 F5 01 12 03 \
-#           0C 31 76 10 A6 08 3A 08 0A C0 C0 56 C0 0B 87 10 \
-#           04 19 04 76 0A 01 EB 06 46 29 01 8D 01 46 A6 0D \
-#           02 EB 03 E6 0D 05 B0 01 E6 10 01 F6 01 46 E6 01 \
-#           05 E6 10 06 F6 01 46 F6 01 0A 7B EA AF
+[Pioneer MIX]
+PID=00 7E
+VariantName=3
+AlternatePID=01 7F
+DevParms=Device 1=166,Device 2=175,Cmd1 (OBC)=161,Cmd2 (OBC)=160,Cmd3 (OBC)=255,Cmd4 (OBC)=255
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,40) \
+                 Translator(lsb,comp,2,8,8) Translator(lsb,comp,3,8,16) Translator(lsb,comp,4,8,24) Translator(lsb,comp,5,8,32)
+FixedData=9A 7A FA 00 00 0A 
+DefaultCmd=00 00
+CmdIndex=0
+CmdParms=Prefix Device:none|dev1,Prefix Command:none|Cmd1|Cmd2|Cmd2|Cmd3,Device:dev1|dev2,OBC=0
+CmdTranslator=Translator(lsb,comp,3) PioneerMixTranslator()
+CmdParmInit=PickInitializer(0,,0) PickInitializer(1,,2,3,4,5) PickInitializer(2,0,1)
+ImportCmdTranslator=Translator(0,2,14) Translator(lsb,comp,1,8,0)
+Notes=Pioneer has started creating new devices that use a similar mix of \
+codes as the Pioneer DVD protocols, but they don't follow the same \
+rules, so these need to be entered manually using the Pioneer MIX \
+protocol. If using the DVD/DVD2 version doesn't work, try this one \
+instead.\
+\n\n\
+On the Setup sheet, enter the device details:\
+\n\n\
+Device 1 = the device code found in both the single-style signals \
+and the first half of the double-style signals.\
+\n\n\
+Device 2 = the device code found in the second half of the double-\
+style signals.\
+\n\n\
+Cmd1 (OBC) = the OBC command code used in the first half of most of the \
+double-style signals.\
+\n\
+Cmd2 (OBC)= the OBC command code used in the rest of the double-style \
+signals (if present)\
+\n\n\
+On the Functions panel, \n\
+For single-style signals, set the Prefix Device and Prefix Command to "none", and Device to the value of Device 1.\n\
+For double-style signals, set the Prefix Device to the value entered for "Device 1" and set Prefix Command to \
+the value of Command 1 or Command 2.  Set Device to the value of Device 2.
+Code.S3C80=40 84 62 8B 12 A5 44 08 08 01 12 00 F5 01 12 03 0C 31 76 10 A6 08 3A 08 0A C0 C0 56 C0 0B 87 10 04 19 04 76 0A 01 EB 06 46 29 01 8D 01 46 A6 0D 02 EB 03 E6 0D 05 B0 01 E6 10 01 F6 01 46 E6 01 05 E6 10 06 F6 01 46 F6 01 0A 7B EA AF
 
 [Pioneer 2CMD]
 PID=00 5F
