Added Denon-K and fixed protocol notes that had become wrong when Panasonic Combo2 was renamed.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@579 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -393,6 +393,32 @@ CmdIndex=1
 Code.S3C80=3D 92 02 8B 16 49 05 08 00 84 01 75 00 84 03 87 83 C2 00 00 00 00 00 00 03 5F A0 20 10 0C 05 76 03 01 6B 0D E4 25 1C E4 26 1D 0C 03 09 12 E6 24 02 18 03 90 C1 0A FC 19 05 B0 C6 60 04 60 05 F6 01 46 60 C6 EB F5 F6 01 0A 7B EE AF
 Code.740=0B 19 12 80 11 E8 80 01 0A 05 08 01 F5 03 53 41 EB 00 2F CF 00 03 3C 02 5C A2 05 A5 5E 85 5D A5 5F 85 5E A5 5D 0A CA D0 FC 85 5F 3C 00 57 44 5F 44 5E 22 00 44 57 D0 F6 22 06 90 EF 60
 
+[Denon-K]
+PID=00 CD
+VariantName=2
+DevParms=Device:4=4,OEM Dev1=84,OEM Dev2=50
+DeviceTranslator=Translator(lsb,comp,0,4,20)  \
+                 Translator(lsb,comp,1,8,0)  \
+                 Translator(lsb,comp,2,8,8)  \
+                 XorCheck(4,16,15,4)
+FixedData=d5 b3 fd
+CmdParms=Z:4=1,OBC:12=0
+CmdTranslator=Translator(lsb,comp,0,4) Translator(lsb,comp,1,12,4)
+DefaultCmd=ff ff
+CmdIndex=1
+Notes=Denon version of the Kaseikyo protocol \
+      \n\n\
+      Normally leave the OEM fields blank to default to 84 and 50, which are the only \
+      values used by Denon. \n\n\
+      The Z value (on the functions sheet) is used to encode Zone in at least one Denon device.  The values observed so far are: \n\
+      Z=1  ->  Zone 1 \n\
+      Z=3  ->  Zone 2 \n\
+      Z=5  ->  Zone 3 \n\
+      Z=7  ->  Zone 4
+Code.S3C80=45 91 32 8B 12 8F 45 08 08 00 DA 00 C6 00 DA 02 7B 90 C9 06 D0 03 54 E4 05 08 B4 06 08 B4 07 08 20 11 8D 01 46
+Code.740=0B 1C 32 80 0E C1 72 10 08 08 01 7F 02 A1 5F 02 80 03 39 A5 5F 45 60 45 61 85 62 3C 06 69 4C 00 FF
+Code.6805-RC16/18=11 26 32 20 10 8F 45 08 08 00 6C 6D 01 6C 48 48 6F 00 31 67 B4 3C DD B6 5D AE 25 A1 DF 27 20 AE 3D A1 C7 27 1A AE 55 A1 AF 27 14 AE 6D A1 97 27 0E AE 4D A1 B7 27 08 AE 0D A1 F7 27 02 AE 05 9F B8 5E B7 5F CC 01 AF
+
 [Device Combiner]
 PID=01 44
 VariantName=S3C80
@@ -1265,7 +1291,7 @@ DefaultCmd=00 C0
 Notes=Combines Pansonic signals with multiple device and subdevice numbers. \
       \n\n\
       If only the subdevice varies, not the device, it is simpler to use the \
-      Panasonic Combo2 protocol.\
+      Panasonic Combo protocol.\
       \n\n\
       You can enter (in the fields A to F ) up to 6 different numbers to be used as \
       device or subdevice values.  For each function you can select one of the six \
@@ -1364,7 +1390,7 @@ Notes=Combines some Sub Device numbers for one Device number. \
       Seriously flawed \
       May be useful if the desired combinations happen to be among the few that \
       work and your remote happens to have this protocol built in.  Otherwise, \
-      use Panasonic Combo2, which does the same job correctly.
+      use Panasonic Combo, which does the same job correctly.
 
 [Panasonic2 (LCD-Hacked)]
 PID=01 09
