--- a/protocols.ini
+++ b/protocols.ini
@@ -1440,8 +1440,8 @@ Code.740=0D 1A 51 80 01 00 A5 62 45 5F 45 60 85 63 A9 80 20 DB 00 A2 37 A0 03 22
 [Pause Protocol (Special)]
 PID=01 FB
 KeyMovesOnly=1
-CmdParms=Duration
-CmdTranslators=Translator()
+CmdParms=Duration:8=0
+CmdTranslator=Translator()
 Code.S3C80=00 00 01 E4 03 C2 C6 C0 00 00 0A FE 1A FC 2A FA AF
 Code.740=00 00 01 A5 5D A0 50 22 42 1A D0 F9 60
 Code.6805-C9=00 00 01 CD 01 92 A6 51 CD 01 9E 3A 50 26 F7 81
