--- a/protocols.ini
+++ b/protocols.ini
@@ -846,7 +846,7 @@ PID=00 C9
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
 Notes=JVC version of Kaseikyo
-DevParms=Main Device,Sub Device
+DevParms=Device,Sub Device
 DeviceTranslator=Translator(lsb,comp,0,8,24) \
                  Translator(lsb,comp,1,8,32) \
                  XorCheck(8,0,255,2,24)
@@ -2397,7 +2397,7 @@ CmdParms=OBC=0
 DevParms=Main Device=133,Sub Device=48,Unit Code=0:0|1|2|3|4|5|6|7|8
 FixedData=FF FF FF
 DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
-                 Translator(lsb,comp,2,8,16)
+                 Translator(lsb,comp,2,4,20)
 Notes=hacked version
 Code.S3C80=43 8d 31 8b 12 cf 44 08 08 01 1a 01 06 01 1a 03 31 d7 42 11 a7 08 b7 08 05 E4 06 05 60 06 46 06 F0 54 C0 06 f6 01 46 46 29 0d 8d 01 49
 Code.740=0D 18 31 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B AB 55 06 C7 02 00 01 01 03 E5 A5 60 AA 49 FF 09 F0 25 5F 85 60 86 5F 4C 00 FF
@@ -2409,9 +2409,9 @@ PID=01 11
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
 DevParms=Main Device=133,Sub Device=48,Unit Code=0:0|1|2|3|4|5|6|7|8
-FixedData=FF FF FF
+FixedData=FF FF F0
 DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
-                 Translator(lsb,comp,2,8,16)
+                 Translator(lsb,comp,2,4,16)
 Notes=hacked version
 Code.S3C80=43 8D 31 8B 15 CA 5D 08 08 01 21 01 06 01 21 03 31 D4 FD 11 A7 08 B7 08 02 08 E4 05 07 56 07 F0 08 06 60 C0 56 C0 0F 44 C0 07 8D 01 46
 Code.740=0D 18 22 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B AB 55 06 C7 02 00 01 01 03 E5 E6 69 4C 00 FF
