--- a/protocols.ini
+++ b/protocols.ini
@@ -653,6 +653,19 @@ Code.740=06 0D 51 80 10 B8 70 17 05 06 03 18 04 97 06 9C 17 08 F0 01 05 E6 5C 44
 Code.6805-C9=06 0E 51 20 11 B8 F0 00 17 05 06 03 19 04 9A 07 01 17 08 F4 01 05 3C 59 33 5A B6 5F A4 03 97 E6 5B B7 5B AD 04 A6 E2 B7 7C CC 01 83
 Code.6805-RC16/18=0B 18 51 20 12 B6 59 05 06 01 62 A4 02 62 C4 06 03 00 06 62 04 05 02 B6 5F A4 03 97 E6 5B B7 5B CC 01 AF
 
+[Dreambox]
+PID=01 6C
+DevParms=Device=18,OEM Dev1=6,OEM Dev2=15,OEM Dev3=68
+DeviceTranslator=Translator(1,8,0) \
+                 Translator(2,8,8) \
+                 Translator(3,8,16) \
+                 Translator(0,8,24)
+FixedData=06 0F 44 12
+CmdParms=OBC=0,Sub Device=0
+CmdTranslator=Translator(1,8,0) Translator(0,8,8)
+CmdIndex=1
+DefaultCmd=00 00
+Code.S3C80=43 8b 42 8b 05 00 00 6a 01 67 e4 07 09 e4 08 0a e4 03 07 e4 04 08 f0 08 56 08 0f f6 ff 90 f6 ff 2f fb 0b 46 08 80 f6 ff 90 f6 ff 2f 7b fb af 28 03 f6 ff 68 28 04 f6 ff 68 28 05 f6 ff 68 28 06 f6 ff 88 c6 f8 19 64 f6 01 58 28 07 f6 ff 68 28 08 f6 ff 68 28 09 f6 ff 68 28 0a f6 ff 88 c6 f8 9b 47 f6 01 58 8d 01 0a 48 c2 f0 c2 f6 ff 74 28 c4 8d ff 74 1c 12 f6 01 4c 56 c2 0f 6b 09 c6 f8 00 3f f6 01 58 2a f7 af f6 ff 68 1c 12 8d 01 4c 08 07 f0 c0 18 08 f6 ff b0 18 09 f6 ff b0 18 0a f6 ff b0 60 c0 0e 56 c0 0f 56 07 f0 44 c0 07 af 28 c1 f0 c1 02 12 02 01 af
 [Echostar 2200]
 PID=01 82
 CmdTranslator=Translator(comp)
@@ -889,6 +902,32 @@ FixedData=00
 CmdParms=OBC:7=0
 CmdTranslator=Translator(0,7,1) XorCheck(1,0,1,7,1)
 Code.S3C80= 3D 92 11 8B 0E 85 41 04 08 00 C8 09 B0 00 C8 04 CE 15 7C 8D 01 46
+
+[Lutron]
+PID=00 E7
+FixedData=FF 88
+DevParms=Device:8=255
+DeviceTranslator=LutronTranslator(0)
+DefaultCmd=11 11
+CmdParms=OBC:8=0,Device:0|1|2|3
+CmdTranslator=LutronTranslator(1)
+CmdParmInit=LutronInitializer()
+Code.S3C80= 3F 85 22 8B 0E 8F 01 08 08 04 78 00 00 00 00 04 66 11 CB 8D 01 46
+Code.740= 0B 17 22 80 0B E0 40 5B 08 08 01 01 03 E8 08 EF 4C 00 FF
+Code.6805-C9=0B 18 22 20 0B E0 40 5B 08 08 01 01 03 E7 0C C3 3F 7D CC 01 83
+Code.6805-RC16/18=10 22 22 20 11 8E 01 08 08 20 3B 00 F2 FF 3D 08 EF 00 00 00 00 00 CC 01 AF
+Notes=Lutron Graphik Eye\
+\n\
+Standard code set, use device code 255\n\
+\n\
+For GRX A1 - use device code 8\n\
+For GRX A2 - use device code 9\n\
+For GRX A3 - use device code 10\n\
+For GRX A4 - use device code 11\n\
+For GRX A5 - use device code 12\n\
+For GRX A6 - use device code 13\n\
+For GRX A7 - use device code 14\n\
+For GRX A8 - use device code 15
 
 [MCE]
 PID=01 2a
