--- a/protocols.ini
+++ b/protocols.ini
@@ -580,10 +580,10 @@ Code.6805-C9=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \
 PID=00 02
 OldNames=Dishplayer (old)
 VariantName=5
-DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Remote Address (1 to 32) :5=1
-DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,0,0,-1)
-CmdParms=Device:0|1|2|,OBC:6=0
-CmdParmInit=PickInitializer(0,0,1,n2)
+DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Device 4:5=0,Remote Address (1 to 32) :5=1
+DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,32) Translator(lsb,4,5,0,0,-1)
+CmdParms=Device:0|1|2|3,OBC:6=0
+CmdParmInit=PickInitializer(0,0,1,n2,n3)
 CmdTranslator=Translator(1,6) Translator(0,2,6)
 Notes=Standard SAT/0775 is Unit 0 / Device 0\
       \n\n\
@@ -600,10 +600,10 @@ Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 \
 
 [Dish Network Combo]
 PID=01 E2
-DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Remote Address (1 to 32) :5=0
-DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,0,0,-1)
-CmdParms=Device:0|1|2|,OBC:6=0
-CmdParmInit=PickInitializer(0,0,1,n2)
+DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Device4:5=0Remote Address (1 to 32) :5=0
+DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,32) Translator(lsb,4,5,0,0,-1)
+CmdParms=Device:0|1|2|3,OBC:6=0
+CmdParmInit=PickInitializer(0,0,1,n2,n3)
 CmdTranslator=Translator(1,6) Translator(0,2,6)
 Notes=This protocol has a minimum of 5 repeats in macros that significantly  improves recognition accuracy in some models.\
     This is the protocol to use for the PVR 721 and 921 and certain others that need a different device number for certain commands.\
