--- a/protocols.ini
+++ b/protocols.ini
@@ -722,10 +722,16 @@ Code.6805-RC16/18=0F 25 11 20 0B 05 04 08 10 3A 68 01 69 3D 21 00 3F 54 19 5A B6
 #KM does not allow this version of Fujitsu as an upgrade.
 #(It will allow Sharp DVD as an upgrade.)
 #Example: RCU810
-#
-#[Fujitsu]
-#PID=00 F8
-#VariantName=1
+
+[Fujitsu]
+PID=00 F8
+VariantName=1
+FixedData=03 D7 39 FF FF
+DevParms=Main Device:8=0,Default Sub Device:8=0
+DeviceTranslator=Translator(lsb,comp,0,8,24)
+DefaultCmd=00 00
+CmdParms=OBC=0,Sub dev={1}
+CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
 #Code.S3C80=43 8B 52 8B 14 8F 45 08 08 00 CB 00 C4 00 CB 02 \
 #           6A 27 70 06 8F 03 3D 40 F8 20 01 76 03 01 6B 09 \
 #           E4 22 1C E4 23 1D 56 28 F7 8D 01 46
@@ -733,14 +739,19 @@ Code.6805-RC16/18=0F 25 11 20 0B 05 04 08 10 3A 68 01 69 3D 21 00 3F 54 19 5A B6
 #         80 03 2B 00 08 07 5D 06 E6 5B E6 69 80 0A E6 5B \
 #         A9 5F 85 71 A9 68 85 72 4C 00 FF
 
-
 #This is version 2
 #It selects 3 lead-out-off times based on bits 0&1 of 1st device byte
 #Example: Sony DirecTiVo RM-Y809
-#
-#[Fujitsu]
-#PID=00 F8
-#VariantName=2
+
+[Fujitsu]
+PID=00 F8
+VariantName=2
+FixedData=03 D7 39 FF FF
+DevParms=Main Device:8=0,Default Sub Device:8=0
+DeviceTranslator=Translator(lsb,comp,0,8,24)
+DefaultCmd=00 00
+CmdParms=OBC=0,Sub dev={1}
+CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
 #Code.S3C80=43 8B 52 8B 16 8F 45 08 08 00 CB 00 C4 00 CB 02 \
 #           6A 27 70 06 8F 03 3D 40 F8 8C 8C 20 01 76 03 01 \
 #           6B 09 E4 22 1C E4 23 1D 56 28 F7 76 03 02 6B 22 \
@@ -748,25 +759,30 @@ Code.6805-RC16/18=0F 25 11 20 0B 05 04 08 10 3A 68 01 69 3D 21 00 3F 54 19 5A B6
 #           01 0A FB 0D 00 0C EB F4 C6 3E 00 00 B0 4A F6 01 \
 #           0A AF 8D 01 46
 
-
 #This is version 3
 #It selects 4 lead-out-off times based on bits 0&1 of 1st device byte
 #(The 6805 version also changes the carrier frequency.)
 #Example: URC-9960B01 (slightly shorter version than other type 3s)
-#
-#[Fujitsu]
-#PID=00 F8
-#VariantName=3
-#Code.S3C80=45 91 52 8B 18 8F 45 08 08 00 DA 00 C6 00 DA 02 \
-#           7D 27 70 06 D1 03 40 40 F8 92 68 55 26 20 01 08 \
-#           03 37 03 0B 37 00 13 56 28 F7 C4 22 1C 8B 0B 37 \
-#           00 05 C4 26 1C 8B 03 C4 24 1C 8D 01 46
-#Code.6805-RC16/18=11 24 52 20 18 8F 45 08 08 00 63 69 01 63 3A 13 \
-#                  C2 00 31 25 A8 49 3E 20 86 13 28 2A 9D 3C 58 03 \
-#                  5A 0B 00 5A 22 B6_79 B7_64 B6_7A B7_65 01 5A 0A \
-#                  B6_77 B7_6F B6_78 B7_70 17_7B 03 5A 12 B6_75 \
-#                  B7_6F B6_76 B7_70 20 08 A6 2A B7_6F A6 80 B7_70 \
-#                  CC 01 B2
+
+[Fujitsu]
+PID=00 F8
+VariantName=3
+FixedData=03 D7 39 FF FF
+DevParms=Main Device:8=0,Default Sub Device:8=0
+DeviceTranslator=Translator(lsb,comp,0,8,24)
+DefaultCmd=00 00
+CmdParms=OBC=0,Sub dev={1}
+CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
+Code.S3C80=45 91 52 8B 18 8F 45 08 08 00 DA 00 C6 00 DA 02 \
+           7D 27 70 06 D1 03 40 40 F8 92 68 55 26 20 01 08 \
+           03 37 03 0B 37 00 13 56 28 F7 C4 22 1C 8B 0B 37 \
+           00 05 C4 26 1C 8B 03 C4 24 1C 8D 01 46
+Code.6805-RC16/18=11 24 52 20 18 8F 45 08 08 00 63 69 01 63 3A 13 \
+                  C2 00 31 25 A8 49 3E 20 86 13 28 2A 9D 3C 58 03 \
+                  5A 0B 00 5A 22 B6_79 B7_64 B6_7A B7_65 01 5A 0A \
+                  B6_77 B7_6F B6_78 B7_70 17_7B 03 5A 12 B6_75 \
+                  B7_6F B6_76 B7_70 20 08 A6 2A B7_6F A6 80 B7_70 \
+                  CC 01 B2
 
 [GI 4DTV Hacked]
 PID=00 A4
@@ -868,6 +884,15 @@ Code.S3C80=45 91 51 8B 12 8F 44 08 08 00 DA 00 C6 00 DA 02 7B 90 C9 06 D0 03 54 
 Code.740=0B 1C 51 80 0E E1 72 10 08 08 01 7F 02 A1 5F 02 80 03 39 44 5D E6 5B A5 62 45 5D 85 63 E6 69 4C 00 FF
 Code.6805-C9=0B 1D 51 B6 5D B8 5E B8 5F B7 60 A6 80 CD 00 B7 A6 03 AE 27 CD 01 9F AE 06 E6 5A E7 4F 5A 26 F9 A6 30 B7 61 A6 10 CD 00 B7 A6 86 4A 26 FD 0E 50 07 A6 02 AE 1E CD 01 9F 39 55 39 54 39 53 39 52 39 51 39 50 3A 61 26 DC A6 10 CD 00 B7 A6 60 AE E0 CD 01 9E CC 01 89
 Code.6805-RC16/18=11 26 51 20 10 8F 45 08 08 00 6C 6D 01 6C 48 48 6F 00 31 67 B4 33 5A 3C 58 B6 5F B8 5A B7 60 3C_66 CC 01 AF
+
+[JVC Combo]
+PID=00 98
+DefaultCmd=00 00
+CmdIndex=1
+CmdParms=OBC=0,Device=0
+CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
+Code.S3C80=43 8B 02 8B 19 CC D9 80 20 08 08 01 07 00 F4 01 07 03 03 73 50 10 7C 08 2A 00 03 00 59 8C 8D 01 46
+Notes=This combo protocol is used for setup codes Audio/1374 & TV/065
 
 [Kaseikyo]
 PID=01 C9
