--- a/protocols.ini
+++ b/protocols.ini
@@ -727,7 +727,7 @@ Code.6805-RC16/18=0F 25 11 20 0B 05 04 08 10 3A 68 01 69 3D 21 00 3F 54 19 5A B6
 PID=00 F8
 VariantName=1
 FixedData=03 D7 39 FF FF
-DevParms=Main Device:8=0,Default Sub Device:8=0
+DevParms=Main Device:8=0,Default Sub Device:8=[0]
 DeviceTranslator=Translator(lsb,comp,0,8,24)
 DefaultCmd=00 00
 CmdParms=OBC=0,Sub dev={1}
@@ -747,7 +747,7 @@ CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
 PID=00 F8
 VariantName=2
 FixedData=03 D7 39 FF FF
-DevParms=Main Device:8=0,Default Sub Device:8=0
+DevParms=Main Device:8=0,Default Sub Device:8=[0]
 DeviceTranslator=Translator(lsb,comp,0,8,24)
 DefaultCmd=00 00
 CmdParms=OBC=0,Sub dev={1}
@@ -768,7 +768,7 @@ CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
 PID=00 F8
 VariantName=3
 FixedData=03 D7 39 FF FF
-DevParms=Main Device:8=0,Default Sub Device:8=0
+DevParms=Main Device:8=0,Default Sub Device:8=[0]
 DeviceTranslator=Translator(lsb,comp,0,8,24)
 DefaultCmd=00 00
 CmdParms=OBC=0,Sub dev={1}
