--- a/protocols.ini
+++ b/protocols.ini
@@ -600,7 +600,7 @@ Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 \
 
 [Dish Network Combo]
 PID=01 E2
-DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Device4:5=0Remote Address (1 to 32) :5=0
+DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Device4:5=0,Remote Address (1 to 32) :5=0
 DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,32) Translator(lsb,4,5,0,0,-1)
 CmdParms=Device:0|1|2|3,OBC:6=0
 CmdParmInit=PickInitializer(0,0,1,n2,n3)
@@ -1838,21 +1838,21 @@ Code.6805-RC16/18=10 27 12 20 15 87 81 10 08 04 00 D9 E1 00 D9 E1 49 27 00 00 00
 
 [RC-5/5x Combo]
 PID=00 73
-DevParms=RC5x Device 1:5=0,Sub-Device>63=0:bool,RC5x Device 2:5=[0],Sub-Device>63:bool=[1],RC5x Device 3:5=[2],Sub-Device>63:bool=[3],RC5x Device 4:5=[4],Sub-Device>63:bool=[5]
-DeviceImporter=RC5Importer()
-DeviceTranslator=Translator(comp,0,5,3) Translator(comp,2,5,11) Translator(comp,4,5,19) Translator(7,1,25) Translator(comp,6,5,27) Rc5FlagTranslator()
+DevParms=RC5x Device 1:5=0,Sub-Device>63=0:bool,RC5x Device 2:5=[0],Sub-Device>63:bool=[-1],RC5x Device 3:5=[2],Sub-Device>63:bool=[-3],RC5x Device 4:5=[4],Sub-Device>63:bool=[-5]
+DeviceImporter=RC5_5xDevImporter()
+DeviceTranslator=Translator(comp,0,5,3) Translator(comp,2,5,11) Translator(comp,4,5,19) Translator(comp,6,5,27) Rc5FlagTranslator()
 FixedData=00 00 00 00
-CmdParms=Type :RC5x|RC5=1,RC5x Device :0|2|4|6,RC5x Sub-Device:7=127,RC5x OBC:6=63,RC5 Device:5,RC5 OBC:7=127
-CmdTranslator=Translator(comp,2,6,0) Translator(comp,3,6,6) Translator(1,2,13) Translator(comp,1,1,12,6) Translator(comp,0,1,15) Translator(comp,4,5,3) \
-Translator(5,1,1,6) Translator(comp,5,6,8) Translator(comp,2,1,11,6)
-CmdParmInit=PickInitializer(1,n0,n2,n4,n6,,)
+CmdParms=  Type  :RC-5|RC-5x=0,OBC:7,RC5 Device:5,RC5x Device :0|2|4|6,RC5x Sub-Device:7
+CmdTranslator=RC5_5xComboTranslator()
+CmdParmInit=RC5_5xInitializer()
+ImportCmdTranslator=RC5_5xImporter()
 DefaultCmd=00 00
-CmdIndex=1
+CmdIndex=0
 Notes=This Protocol can do either RC5 or RC5x mostly used in McIntosh and Philips equipment. It can do all 128 OBC's for any device in RC5. \n\n\
 In the Setup tab you can select any four devices in RC5x and pick between subdevices 0-63 or 64-127 by marking the checkbox by the respective device.\n\n\
-In the functions tab you select the signal type (RC-5 or RC-5x), then you must use the appropriate columns for that type. For the RC-5x type, you can select any of the four RC5x Devices in the RC5x Device column, and enter the RC5x Sub-Device and RC5x OBC.\nFor the RC-5 type, use columns further right for RC5 Device and RC5 OBC.\n\nNote: Since the variable data \
-mapping is different between RC5x and RC5, values will appear in RC5x columns \
-as you enter data in the RC5 columns and vice-versa. Just ignore the ones you aren't using.
+In the functions tab you select the signal type (RC-5 or RC-5x), and enter the OBC.  Then you must use the appropriate columns for that type.\n\n\
+For the RC-5 type, use the "RC5 Device" column.\n\n\
+For the RC-5x type, you can select any of the four RC5x Devices in the RC5x Device column, and enter the RC5x Sub-Device.
 Code.S3C80=40 9A 42 8B 17 C8 81 10 00 08 01 C2 01 A4 01 C2 01 A4 DE 2C 00 00 06 C2 94 01 06 00 28 08 37 21 18 E4 07 03 E4 08 04 E6 10 00 28 03 76 00 01 6B 45 B6 C2 20 29 03 8D 01 49 E6 25 09 E6 24 04 E6 28 89 E6 12 08 E4 22 1C E4 23 1D 28 08 37 22 08 37 24 0D E4 06 03 8B 0B 37 24 08 E4 05 03 8B 03 E4 04 03 E4 07 04 E4 08 05 76 00 01 6B 03 B6 03 20 77 77 E6 10 01 8D 01 49
 Code.740=0C 1C 42 80 11 E9 C0 20 20 08 08 02 07 02 06 02 C9 6F 20 00 00 04 17 62 38 3C 01 69 A5 62 4A 29 03 AA B5 5D 85 5D A5 61 85 5E A5 62 85 5F 17 5A 06 A5 5D 49 20 85 5D 3C 04 77 2F 5C 3C C0 7E 22 00 3C A8 7E 22 00 A2 78 A0 5D 22 44 22 06 90 EC 60 3C 06 6C 3C E1 7E 3C 81 7F 3C 21 80 3C 01 69 A5 73 85 71 A5 74 85 72 A5 62 85 5E A5 61 17 5A 02 49 20 85 5D 4C 00 FF 60
 Code.6805-RC16/18=10 27 42 20 15 87 81 10 08 04 00 DE E1 00 DE E1 4A 0A 6E F9 00 00 03 00 84 09 01 5F 22 B6 5F 44 A4 03 97 E6 5A B7 5A 01 57 04 A8 20 B7 5A 3F 58 B6 5E B7 5B B6 5F B7 5C A6 02 B7_66 CC 01 C4 A6 06 B7_68 B6 5E B7 5A B6 5F B7 5B A6 01 B7_66 A6 C5 B7_7B B6_71 B7_6F B6_72 B7_70 01 57 06 B6 5A A8 20 B7 5A CC 01 B2
