--- a/protocols.ini
+++ b/protocols.ini
@@ -2287,7 +2287,7 @@ Notes=Combines two devices, each of which may be either Sony12 or Sony15 \
    than 32 are Sony12, which is almost always correct.  Check "Force Sony15" to \
    make the device number (just the one above that check box) be Sony15 even if \
    it is less than 32.
-DevParms=Device 1,Force Sony15:bool,Device 2,Force Sony15:bool
+DevParms=Device 1=0,Force Sony15:bool,Device 2=[0],Force Sony15:bool
 DeviceImporter=ReorderImporter(0,2)
 DeviceTranslator=Translator(lsb,0,8) Translator(lsb,2,8,8) Sony1215Translator()
 FixedData=00 00 00
