*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@625 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -223,6 +223,9 @@ Notes=We have (rather arbitrarily) assigned the name "Sub Device" to the portion
 Code.S3C80=3D 91 21 8B 13 E6 44 08 08 01 12 03 3C 01 12 01 \
            0B D2 37 11 7E 08 C3 05 08 04 37 01 06 F6 01 46 \
            E6 28 C0 46 29 01 8D 01 46
+Code.HCS08=20 16 1F 4A 21 E6 44 08 08 01 11 03 50 01 11 01 \
+                          1F D2 23 11 7D 08 D7 05 00 61 05 AD 05 6E C0 \
+                          A2 10 A3 CC FF 5F
 
 [Aiwa2]
 PID=00 5E
@@ -426,6 +429,7 @@ Notes=Denon version of the Kaseikyo protocol \
 Code.S3C80=45 91 32 8B 12 8F 45 08 08 00 DA 00 C6 00 DA 02 7B 90 C9 06 D0 03 54 E4 05 08 B4 06 08 B4 07 08 20 11 8D 01 46
 Code.740=0B 1C 32 80 0E C1 72 10 08 08 01 7F 02 A1 5F 02 80 03 39 A5 5F 45 60 45 61 85 62 3C 06 69 4C 00 FF
 Code.6805-RC16/18=11 26 32 20 10 8F 45 08 08 00 6C 6D 01 6C 48 48 6F 00 31 67 B4 3C DD B6 5D AE 25 A1 DF 27 20 AE 3D A1 C7 27 1A AE 55 A1 AF 27 14 AE 6D A1 97 27 0E AE 4D A1 B7 27 08 AE 0D A1 F7 27 02 AE 05 9F B8 5E B7 5F CC 01 AF
+Code.HCS08=20 15 23 4A 32 8F 45 08 08 00 D7 00 DC 00 D7 02 91 90 DD 06 CF 03 68 B6 62 B8 63 B8 64 B7 65 3C A9 CC FF 5F
 
 [Device Combiner]
 PID=01 44
@@ -605,6 +609,10 @@ Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 \
            73 0B F2 00 C5 0B F2 05 02 08 03 37 00 0C E6 22 \
            02 E6 0E 43 E6 0F 8B F6 01 55 18 08 56 C1 03 87 \
            21 04 29 04 8D 01 46
+Code.HCS08=20 17 17 2F 51 B6 59 05 06 00 C4 03 46 00 C4 05 \
+                          87 0C 06 00 C4 0C 06 05 02 01 60 0B 6E 02 7A 45 \
+                          22 48 35 A7 CD FF 6E B6 65 A4 03 97 8C E6 61 B7 \
+                          61 CC FF 5F
 
 [Dish Network Combo]
 PID=01 E2
@@ -687,21 +695,47 @@ Code.S3C80=2C 5C 21 8B 0F C5 81 10 08 07 01 A4 01 95 01 A4 01 95 60 D1 08 05 56 
 Code.740=07 0C 21 80 0C E0 82 21 30 08 07 01 F9 01 F8 30 9B 17 5F 04 A5 5E 80 02 A5 5D 17 5A 02 49 20 85 5D 4C 00 FF
 Code.HCS08=20 14 17 30 31 C5 81 10 08 07 01 A3 01 A4 01 A3 01 A4 61 62 D2 BA 01 60 0C 45 22 47 35 A7 CD FF 6E 55 76 35 74 B6 61 01 63 02 B6 62 01 B3 02 A8 20 B7 60 CC FF 5F
 
-[Emerson]
+[Emerson Combo (3-device)]
 PID=00 65
+OldNames=Emerson
 DevParms=Device 1:6=0,Device 2:6=[0],Device 3:6=[1]
-DeviceTranslator=Translator(lsb,comp,0,6,0) Translator(lsb,comp,1,6,8) \
-                 Translator(lsb,comp,2,6,16)
+DeviceTranslator=Translator(lsb,comp,0,6,0) Translator(lsb,comp,1,6,8) Translator(lsb,comp,2,6,16)
 CmdParms=Device:Dev. 1|Dev. 2|Dev. 3|OBC=0,OBC:6=0
 CmdParmInit=PickInitializer(0,0,n1,n2)
 CmdTranslator=Translator(0,2,6) Translator(lsb,comp,1,6)
-Notes=
 FixedData=00 00 00
+Notes=Official version 3-device combo
 Code.S3C80=45 91 31 8B 12 D5 45 06 06 01 B3 01 9F 01 B3 05 05 CC 6A 06 CC 06 B8 E4 06 01 56 01 03 8D 01 46
 Code.740=0B 1A 31 80 0F F4 B2 01 20 06 06 02 0F 04 55 66 3F 80 05 7B A5 60 29 03 85 5B 4C 00 FF
-Code.6805-C9=0B 1B 11 20 0F F4 F2 00 20 05 07 02 04 04 35 29 DB 80 05 54 33 5A 33 5B CD 01 83 81
+Code.6805-C9=0B 1B 31 20 0F F4 B2 00 20 06 06 02 04 04 35 29 DB 80 05 54 B6 5D A4 03 B7 58 CC 01 83
 Code.6805-RC16/18=11 26 31 20 10 D5 45 06 06 00 D9 D9 02 D9 8C 66 3F 00 33 65 66 B6 5D A4 03 B7 58 CC 01 AF
+Code.HCS08=20 15 23 4A 31 D5 45 06 06 01 B2 01 B3 01 B2 05 19 CC 7E 06 CB 06 CC B6 63 A4 03 B7 AC CC FF 5F
+
+[Emerson Combo (4-device)]
+PID=00 65
+VariantName=2
+DevParms=Device 1:6=0,Device 2:6=[0],Device 3:6=[1],Device 4:6=[2]
+DeviceTranslator=Translator(lsb,comp,0,6,0) Translator(lsb,comp,1,6,8) Translator(lsb,comp,2,6,16) Translator(lsb,comp,3,6,24)
+CmdParms=Device:Dev. 1|Dev. 2|Dev. 3|Dev. 4|OBC=0,OBC:6=0
+CmdParmInit=PickInitializer(0,0,n1,n2,n3)
+CmdTranslator=Translator(0,2,6) Translator(lsb,comp,1,6)
+Notes=Official 4-device combo version
+FixedData=00 00 00 00
+Code.S3C80=45 91 41 8B 14 C3 45 06 06 01 A3 01 90 01 A3 04 D3 CC 6A 06 8E 06 78 C4 36 18 07 56 C1 03 87 21 03 29 03 E4 07 04 E4 07 06 60 06 37 22 0F E6 0E 43 E6 0F 8B F6 01 55 E4 22 1C E4 23 1D 37 20 05 B6 C2 E4 8B 02 60 C2 29 05 8D 01 46
+Code.6805-RC16/18=11 26 41 20 12 C3 45 06 06 00 D1 D0 02 D1 70 66 3F 00 33 46 42 62 25 B6 5E A4 03 97 E6 5A B7 5A 03 5A 10 AE 11 A6 23 BF 10 B7 11 B6_75 B7_6F B6_76 B7_70 B6 5A 43 B7 5C B6 5E B7 5B 43 B7 5D 01 5A 06 B6 5A A8 E4 B7 5C CC 01 AF
 Code.HCS08=20 23 23 4A 41 C3 45 06 06 01 B2 01 B3 01 B2 05 19 CC 7E 06 CB 06 CC 01 A2 01 A3 01 A2 04 E6 C4 4A 06 8A 06 8B B6 64 A4 03 8C 97 E6 60 B7 60 43 B7 62 B6 64 B7 61 43 B7 63 03 60 11 45 22 47 35 A7 CD FF 6E 45 00 0E E6 79 E7 6B 5B FA 01 60 06 B6 60 A8 E4 B7 62 CC FF 5C
+
+[Emerson (1-device)]
+PID=00 65
+VarantName=old
+DevParms=Device:6=0
+DeviceTranslator=Translator(lsb,0,5,0)
+CmdParms=OBC:6=0
+DefaultCmd=01
+CmdTranslator=TranslatorFromDev(0,1,0,5) Translator(lsb,0,6,1)
+FixedData=07
+Notes=
+Code.6805-C9=0B 1B 11 20 0F F4 F2 00 20 05 07 02 04 04 35 29 DB 80 05 54 33 5A 33 5B CC 01 83
 
 [F12]
 PID=00 1A
@@ -1425,6 +1459,7 @@ Code.S3C80=45 91 82 8B 12 8F 45 08 08 00 DA 00 C6 00 DA 02 \
            7B 90 C9 06 D0 03 54 0C 03 1C 02 93 C0 C2 04 0C \
            0C FB 03 83 C1 C2 EB F3 E4 0B 07 E4 05 08 B4 06 \
            08 B4 07 08 E0 10 8D 01 46
+Code.HCS08=20 15 23 4A 82 8F 45 08 08 00 D7 00 DC 00 D7 02 91 90 DD 06 CF 03 68 3F 52 3F 53 8C 39 69 24 0A BE 53 E6 60 BE 52 E7 60 3C 52 3C 53 04 52 05 06 53 02 20 E8 6E 04 A9 4E 68 64 B6 62 B8 63 B8 64 B7 65 CC FF 5F
 
 [Panasonic Combo]
 OldNames=Panasonic Combo (Official)
@@ -1779,6 +1814,7 @@ For double-style signals, set the Prefix Device to the value entered for "Device
 the value of Command 1 or Command 2.  Set Device to the value of Device 2.
 Code.S3C80=40 84 62 8B 12 A5 44 08 08 01 12 00 F5 01 12 03 0C 31 76 10 A6 08 3A 08 0A C0 C0 56 C0 0B 87 10 04 19 04 76 0A 01 EB 06 46 29 01 8D 01 46 A6 0D 02 EB 03 E6 0D 05 B0 01 E6 10 01 F6 01 46 E6 01 05 E6 10 06 F6 01 46 F6 01 0A 7B EA AF
 Code.HCS08=20 15 21 43 62 A5 44 08 08 01 11 01 09 01 11 03 20 31 8A 10 A5 08 4E 8C BE 67 54 E6 61 B7 61 00 67 05 10 A3 CC FF 5F 3F AC 6E 01 A9 AD F6 6E 05 AC 6E 06 A9 AD EE CD FF 92 25 EC 81
+
 [Pioneer 2CMD]
 PID=00 5F
 CmdParms=OBC=0,Byte 2=0
@@ -2439,6 +2475,10 @@ Code.6805-RC16/18=0F 23 42 20 13 F8 15 05 07 10 2B 96 00 95 96 2B \
                   F2 00 20 57 96 08 03 08 00 5E 16 01 5F 0F A6 F9 \
                   B7_7B A6 08 B7_67 B6 5F 46 A4 03 B7 58 A6 05 \
                   B7_77 CC 01 B2
+Code.HCS08=20 18 1E 46 42 F8 15 05 07 02 57 01 31 01 2B 01 \
+                          31 57 E4 04 AF 01 31 08 03 08 00 64 12 01 65 0C \
+                          10 A2 6E 08 6A B6 65 46 A4 03 B7 AC 6E 05 7C \
+                          CC FF 5C
 
 [Sony DSP]
 PID=01 42
@@ -2528,6 +2568,8 @@ CmdTranslator=Translator(lsb,comp,0,6,1) \
 DefaultCmd=00
 Code.S3C80=76 76 11 8B 0E C5 41 05 07 00 F2 03 DC 00 F2 08 \
            BE 9C 40 31 02 27 07 03 31 C2 8D 01 46
+Code.HCS08=20 11 3C 3C 11 C5 41 05 07 00 E5 04 01 00 E5 08 F2 9C 40 01 B3 06 B6 60 A8 08 B7 60 CC FF 5F
+
 
 [TiVo (Advanced)]
 OldNames=TiVo Hacked,Tivo Hacked,Tivo (Advanced)
