*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@627 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1082,6 +1082,26 @@ DefaultCmd=00 20
 CmdIndex=0
 Notes=38.1 kHz  IR.exe and other tools that use DecodeIR.dll will decode a NECx1 or NECx2 protocol only if device=sub-device.
 Code.S3C80=43 8B 42 8B 14 CF 44 08 08 01 18 01 06 01 18 03 39 D2 DC 11 94 08 B6 08 CA E6 10 02 08 08 37 0E 06 E4 05 03 E4 06 04 E4 07 05 E4 07 06 60 06 37 0B 05 E4 03 04 60 04 37 06 05 F6 01 04 7B 09 37 09 0C 37 01 03 46 29 0D 46 29 01 8D 01 49 E4 22 1E E4 23 1F 37 01 EB F6 01 49 E6 28 C1 60 03 E6 12 01 8B E4
+Code.6805-RC16/18=11 24 42 20 10 CF 44 08 08 00 8B 8D 01 8B A7 69 78 00 84 C9 65 AE 02 BF 66 B6 5F 42 58 E6 5A B7 5A 43 0B 5F 02 E6 5B B7 5B B6 5E B7 5C 43 B7 5D 07 5F 05 CD 01 83 24 08 08 5F 0A 00 5F 02 16_7C 10_7C CC 01 B2 A6 44 B7_72 A6 64 B7_73 00 5F F0 AD F0 A6 C1 B7_7B 33 5A A6 01 B7_67 20 E2
+Code.HCS08=20 15 22 47 42 CF 44 08 08 01 17 01 1A 01 17 03 4D D2 F0 11 93 08 CA AE 02 BF A9 B6 65 42 58 9E CE 60 0A 65 03 8B 88 53 35 60 B6 64 B7 62 43 B7 63 07 65 05 CD FF 8F 25 08 08 65 0A 00 65 02 16 A3 10 A3 CC FF 5C 45 08 C9 35 76 00 65 F3 AD F3 6E C1 A2 33 60 6E 01 6A 20 E7
+
+[NEC 4DEV Combo]
+PID=01 1A
+VariantName=2
+DevParms=Device 1,Sub Device 1=[-0],Device 2,Sub Device 2=[-2],Device3,Sub Device 3=[-3],Device 4,Sub Device 4=[-4]
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
+                 Translator(lsb,comp,2,8,16) Translator(lsb,comp,3,8,24) \
+                 Translator(lsb,comp,4,8,32) Translator(lsb,comp,5,8,40) \
+                 Translator(lsb,comp,6,8,48) Translator(lsb,comp,7,8,56)
+FixedData=ff 00 ff 00 ff 00 ff 00
+CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,1,8) Translator(2,1,11,1) Translator(2,1,15)
+CmdParms=OBC:8=0,Device:0|1|2|3,Style :NEC1|NEC2|NECx1|NECx2=0
+CmdParmInit=PickInitializer(1,N0,N2,N4,N6)
+DefaultCmd=00 20
+CmdIndex=0
+Notes=38.1 kHz  IR.exe and other tools that use DecodeIR.dll will decode a NECx1 or NECx2 protocol only if device=sub-device.
+Code.S3C80=43 8B 82 8B 14 CF 44 08 08 01 18 01 06 01 18 03 39 D2 DC 11 94 08 B6 08 CA E6 10 02 08 0C 18 C0 56 C1 C0 F0 C1 E0 C1 06 C1 03 93 C1 03 E5 C1 04 E4 0B 05 E4 0B 06 60 06 37 0B 05 E4 03 04 60 04 37 06 05 F6 01 04 7B 09 37 09 0C 37 01 03 46 29 0D 46 29 01 8D 01 49 C4 22 1E 37 01 EE F6 01 49 E6 28 C1 60 03 E6 12 01 8B E7
+Code.6805-RC16/18=11 24 82 20 10 CF 44 08 08 00 8B 8D 01 8B A7 69 78 00 84 C9 65 AE 02 BF 66 B6 63 58 42 58 E6 5A B7 5A 43 0B 63 02 E6 5B B7 5B B6 62 B7 5C 43 B7 5D 07 63 05 CD 01 83 24 08 08 63 0A 00 63 02 16_7C 10_7C CC 01 B2 A6 44 B7_72 A6 64 B7_73 00 63 F0 AD F0 A6 C1 B7_7B 33 5A A6 01 B7_67 20 E2
 Code.HCS08=20 17 22 47 82 CF 44 08 08 01 17 01 1A 01 17 03 4D D2 F0 11 93 08 CA 08 C9 B6 69 B7 56 A4 C0 62 44 97 8C 9E CE 60 35 60 6E 02 A9 B6 68 B7 62 B7 63 33 63 0A 56 05 4E 60 61 33 61 07 56 05 CD FF 8F 25 0A 08 56 0C 00 56 04 14 A3 16 A3 10 A3 CC FF 5C 55 7A 35 76 00 56 ED CD FF 5C 6E C1 A2 33 60 6E 01 6A 20 E7
 
 [NEC1]
