*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@631 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1078,6 +1078,7 @@ FixedData=ff 00 ff 00
 CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,1,8) Translator(2,1,11,1) Translator(2,1,15)
 CmdParms=OBC:8=0,Device:0|1,Style :NEC1|NEC2|NECx1|NECx2=0
 CmdParmInit=PickInitializer(1,N0,N2)
+ImportCmdTranslator=Translator(0,1,8) NECStyleImporter(1)
 DefaultCmd=00 20
 CmdIndex=0
 Notes=38.1 kHz  IR.exe and other tools that use DecodeIR.dll will decode a NECx1 or NECx2 protocol only if device=sub-device.
@@ -1094,9 +1095,10 @@ DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
                  Translator(lsb,comp,4,8,32) Translator(lsb,comp,5,8,40) \
                  Translator(lsb,comp,6,8,48) Translator(lsb,comp,7,8,56)
 FixedData=ff 00 ff 00 ff 00 ff 00
-CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,1,8) Translator(2,1,11,1) Translator(2,1,15)
+CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,2,8) Translator(2,1,11,1) Translator(2,1,15)
 CmdParms=OBC:8=0,Device:0|1|2|3,Style :NEC1|NEC2|NECx1|NECx2=0
 CmdParmInit=PickInitializer(1,N0,N2,N4,N6)
+ImportCmdTranslator=Translator(0,2,8) NECStyleImporter(1)
 DefaultCmd=00 20
 CmdIndex=0
 Notes=38.1 kHz  IR.exe and other tools that use DecodeIR.dll will decode a NECx1 or NECx2 protocol only if device=sub-device.
