--- a/protocols.ini
+++ b/protocols.ini
@@ -522,9 +522,23 @@ CmdParms=OBC=0
 DevParms=Device Number:4=12,Parm:4:$=3
 DeviceTranslator=Translator(0,4) Translator(1,4,4)
 FixedData=C3
-Notes=38.5 kHz {38k,600,msb}<1,-1|1,-2|2,-1|2,-2>(10,-2,D:4,F:8,C:4,1.-50,(5,-2,D:4,F:8,C:4,1,-50)+) \
-where C=mod16(F:1:7*14+F:1:6*7+F:1:5*10+F:1:4*5+F:1:3*6+F:1:2*3+F:1:1*2+F:1:0)
+Notes=The Parm value selects between three different frequencies and two different lead-out values.\n\
+To compute Parm, select one of 0, 2 or 4 for frequency and one of 0 or 1 for lead-out and add those two numbers together:\n\
+frequency 0 = 40Khz\n\
+frequency 2 = 38Khz\n\
+frequency 4 = 57Khz\n\
+lead-out 0 = 9ms\n\
+lead-out 1 = 30ms\n\
+For example, the default Parm value 3 is frequency 2 (38Khz) and lead-out 1 (30ms)
 Code.S3C80=40 84 11 8B 15 00 01 2C 01 18 01 2C 02 44 02 58 01 18 02 58 02 44 0B B8 02 44 B0 0C 68 03 37 64 0B E6 0E 2C E6 0F 5D F6 01 55 8B 0C 37 62 09 E6 0E 43 E6 0F 8A F6 01 55 F6 FF 91 1C 22 F6 01 4C 38 03 F6 FF 7A 38 04 F6 FF 76 38 05 F6 FF 7A 1C 12 F6 01 64 37 60 07 C6 F8 29 04 F6 01 58 C6 F8 11 94 F6 01 58 76 0C 01 EB 06 C6 22 05 DC 20 0C F6 01 0A 7B C6 AF 4C 04 8B 02 4C 02 90 C3 90 C3 08 C3 56 C0 03 86 04 C0 06 C1 12 F6 01 4C 4A EC AF C6 08 01 03 C6 0A 05 07 B0 C0 B0 C2 38 04 48 C3 56 C4 03 87 50 08 02 24 5A FC E0 C3 E0 C3 0E 37 04 EC F0 C2 29 05 AF
+Code.HCS08= 20 06 17 2F 11 08 0B B8 04 60 0E 45 23 46 02 60 \
+            03 45 21 43 35 A7 CD FF 6E 4F BE 61 3A A2 58 24 \
+            04 BB A2 BB A2 58 24 02 BB A2 3B A2 EF 48 48 48 \
+            48 B7 62 AD 3E 4E 60 A2 AD 25 4E 61 A2 AD 1E 4E \
+            62 A2 AD 1B AD 1B 45 05 DC 35 6A 45 39 6C 00 60 \
+            03 45 10 68 CD FF 74 CD FF 92 25 D7 81 AD 00 AD \
+            00 45 01 2C 35 6C 38 A2 24 03 45 02 58 35 6A 38 \
+            A2 24 05 45 02 58 35 6C AE 6A CC FF 65 
 
 [Dishplayer]
 PID=01 0F
@@ -1062,12 +1076,23 @@ CmdParms=OBC=0
 DevParms=Device Number
 DeviceTranslator=Translator(lsb,comp)
 FixedData=ff
-Notes=s16a in ccf2efc
 Code.S3C80=47 A9 11 8B 0E C5 41 08 08 00 96 01 B8 00 96 04 1A 68 E2 E6 0D 03 8D 01 46
 Code.740=10 1D 11 80 0C E0 A2 01 0A 08 08 02 1F 03 B7 34 7B 3C 02 83 4C 00 FF
 Code.6805-C9=14 1A 11 20 0C E0 E1 00 0A 08 08 02 19 03 AE 1F 92 CC 01 83
 Code.6805-RC16/18=12 2B 11 20 0C C5 41 08 08 00 4A E6 02 4A 17 34 7B A6 03 B7_80 CC 01 AF
 Code.HCS08=20 11 28 52 11 C5 41 08 08 00 95 01 CC 00 95 04 2E 68 F6 6E 03 B2 CC FF 5F
+
+[Mitsubishi Alt Delay]
+PID=01 A4
+CmdTranslator=Translator(lsb,comp)
+CmdParms=OBC=0
+DevParms=Device Number
+DeviceTranslator=Translator(lsb,comp)
+FixedData=ff
+Notes=Same as Mitsubishi, except a quarter second delay is added after every two frames.\n\
+That might be useful in case ordinary Mitsubishi is doubling commands and/or ramping too \
+fast in Vol, etc.
+Code.HCS08=20 11 28 52 11 C5 40 08 08 00 95 01 CC 00 95 04 2E 68 F6 CD FF 5F CD FF 5F C6 01 11 4C 4C C7 01 11 45 FF DC CD FF 74 45 FF DC CD FF 74 CD FF 92 25 E1 81
 
 [NEC 2DEV Combo]
 PID=01 1A
@@ -1897,6 +1922,15 @@ Code.740=0B 1A 11 80 0F C0 78 14 08 08 01 9C 02 FB 04 6C 40 06 6F 02 BF 3C AF 3E
 Code.6805-C9=0B 1A 11 20 10 C0 F8 00 14 08 08 01 98 02 F6 04 7C 40 06 69 02 3F 58 A6 F8 B7 7C CD 01 83 3C 58 A6 E0 B7 7C CD 01 83 A6 1A AE F7 CD 01 9E CC 01 89
 Code.6805-RC16/18=11 24 11 20 14 C5 45 08 08 00 84 85 01 84 8E 3D D1 00 84 3D 1F 04 84 1F 09 CC 01 C4
 Code.HCS08=20 15 22 48 11 C5 45 08 08 01 03 01 09 01 03 03 1B 7B A2 10 7B 08 3E 6E 09 7D CC FF 7A
+
+[Proton Combo]
+PID=01 1B
+CmdParms=Device=0,OBC=0
+CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
+DefaultCmd=FF FF
+Notes=
+FixedData=
+Code.S3C80=43 8C 02 8B 16 C5 45 08 08 01 09 00 F5 01 09 03 07 7B 8E 10 7C 08 2A 00 00 00 09 20 10 8D 01 61
 
 [RC-5]
 PID=00 E8
@@ -3787,7 +3821,3 @@ Code.HCS08=20 16 22 47 21 86 04 04 02 02 E8 00 D4 01 05 02 B1 09 7C 01 05 00 D4 
 [pid: 01 9B]
 PID=01 9B
 Code.HCS08=20 19 22 47 11 85 45 08 08 00 F6 04 E2 00 F6 02 EE 2C EF 05 DB 05 E8 00 F6 07 DC 45 00 04 E6 79 E7 99 5B FA 16 AB 6E 11 7D CC FF 5F
-
-[pid: 01 A4]
-PID=01 A4
-Code.HCS08=20 11 28 52 11 C5 40 08 08 00 95 01 CC 00 95 04 2E 68 F6 CD FF 5F CD FF 5F C6 01 11 4C 4C C7 01 11 45 FF DC CD FF 74 45 FF DC CD FF 74 CD FF 92 25 E1 81
