--- a/protocols.ini
+++ b/protocols.ini
@@ -2340,7 +2340,7 @@ PID=00 92
 CmdTranslator=Translator(0,8,8)
 CmdParms=OBC=0
 Notes=official version
-DevParms=Device Code,Unit Code
+DevParms=Device Code=1,Unit Code
 DeviceTranslator=Translator(0,8,8)
 FixedData=e0 01
 DefaultCmd=00 00
@@ -2349,6 +2349,75 @@ Code.S3C80=47 93 22 8B 13 CF 85 40 08 04 00 DE 00 00 00 00 00 CA 0D BF 05 35 01 
 Code.740=0C 1C 22 A9 60 20 DB 00 A2 16 A0 02 22 44 A5 5D 85 56 20 6C 01 A2 1B A0 02 22 44 A9 20 20 DB 00 A5 5E 20 71 01 A5 5F 20 71 01 A5 60 20 71 01 A2 2A A0 A1 22 44 22 06 90 CA 60 3C 04 57 80 05 85 56 3C 08 57 26 56 B0 0D A2 86 A0 01 22 44 A9 10 20 DB 00 80 0B A9 10 20 DB 00 A2 86 A0 01 22 44 C6 57 D0 E0 60
 Code.6805-RC16/18=12 26 22 20 0A 00 00 00 6F 00 6E 00 20 9A DE AE 06 AD 47 B6 5A AD 18 AD 39 B6 5B AD 18 B6 5C AD 14 B6 5D AD 10 AE 6A A6 09 CD 01 C1 24 E1 81 B7 53 AE 04 20 04 B7 53 AE 08 BF 52 0F 53 06 AD 18 AD 0D 20 04 AD 09 AD 10 39 53 3A 52 26 ED 81 5F 20 08 AD FB AD F9 AD 00 AE 03 CD 01 CA 81
 Code.6805-C9=0D 1C 22 A6 60 BD B7 A6 02 AE 18 CD 01 9F 9D 9D CD 01 92 A6 04 97 AD 27 A6 02 AE 18 CD 01 9F 9D 9D A6 20 BD B7 B6 5B AD 12 B6 5C AD 0E B6 5D AD 0A A6 B3 AE DD CD 01 9E CC 01 89 B7 50 A6 08 B7 51 0E 50 02 AD 12 A6 10 BD B7 0F 50 02 AD 09 38 50 3A 51 26 EC 81 AD 00 A6 8D 4A 26 FD 26 00 81
+
+[ReplayTV (Official)]
+OldNames=ReplayTV Official
+PID=00 92
+VariantName=3
+CmdTranslator=Translator()
+CmdParms=OBC=0
+Notes=official version
+DevParms=Device Code=1,Unit Code
+DeviceTranslator=Translator(0,1,16,7) Translator(0,1,17,7,comp) \
+                 Translator(0,1,18,6) Translator(0,1,19,6,comp) \
+                 Translator(0,1,20,5) Translator(0,1,21,5,comp) \
+                 Translator(0,1,22,4) Translator(0,1,23,4,comp) \
+                 Translator(0,1,24,3) Translator(0,1,25,3,comp) \
+                 Translator(0,1,26,2) Translator(0,1,27,2,comp) \
+                 Translator(0,1,28,1) Translator(0,1,29,1,comp) \
+                 Translator(0,1,30,0) Translator(0,1,31,0,comp) \
+                 Translator(1,1,32,7) Translator(1,1,33,7,comp) \
+                 Translator(1,1,34,6) Translator(1,1,35,6,comp) \
+                 Translator(1,1,36,5) Translator(1,1,37,5,comp) \
+                 Translator(1,1,38,4) Translator(1,1,39,4,comp) \
+                 Translator(1,1,40,3) Translator(1,1,41,3,comp) \
+                 Translator(1,1,42,2) Translator(1,1,43,2,comp) \
+                 Translator(1,1,44,1) Translator(1,1,45,1,comp) \
+                 Translator(1,1,46,0) Translator(1,1,47,0,comp)
+FixedData=A9 30 00 00 00 00
+DefaultCmd=00
+Code.HCS08=20 19 24 4B 61 CE 85 40 08 08 00 DD 00 00 00 00 00 DE 0D D3 05 2D 01 C3 04 CD 02 01 61 09 01 B3 06 B6 61 A8 F0 B7 61 03 61 06 55 7B 35 74 1D A4 B6 66 AE 08 CD FF 8C BF 66 B7 67 6E 02 A9 6E 06 AA CC FF 5F
+
+[RC6-M-24]
+PID=00 92
+VariantName=3
+CmdTranslator=Translator()
+CmdParms=OBC=0
+Notes=This is a more flexible version of the generator for Replay.\n\
+So far as we have seen Replay always has:\n\
+Device = 1\n\
+Subdevice = Unit\n\
+M = 6\n\
+T = 0\n\
+Leadout = 108ms (approximate)\n\
+If all those are true in the signals you're trying to create, it would be simpler to create the upgrade as ReplayTV (Official) \
+rather than as RC6-M-24.  But if you need the extra flexibility, this choice is available
+DevParms=Device,Subdevice,M:3=6,T-bit:0|1|toggle,Leadout:108ms|75ms
+DeviceTranslator=Translator(0,1,16,7) Translator(0,1,17,7,comp) \
+                 Translator(0,1,18,6) Translator(0,1,19,6,comp) \
+                 Translator(0,1,20,5) Translator(0,1,21,5,comp) \
+                 Translator(0,1,22,4) Translator(0,1,23,4,comp) \
+                 Translator(0,1,24,3) Translator(0,1,25,3,comp) \
+                 Translator(0,1,26,2) Translator(0,1,27,2,comp) \
+                 Translator(0,1,28,1) Translator(0,1,29,1,comp) \
+                 Translator(0,1,30,0) Translator(0,1,31,0,comp) \
+                 Translator(1,1,32,7) Translator(1,1,33,7,comp) \
+                 Translator(1,1,34,6) Translator(1,1,35,6,comp) \
+                 Translator(1,1,36,5) Translator(1,1,37,5,comp) \
+                 Translator(1,1,38,4) Translator(1,1,39,4,comp) \
+                 Translator(1,1,40,3) Translator(1,1,41,3,comp) \
+                 Translator(1,1,42,2) Translator(1,1,43,2,comp) \
+                 Translator(1,1,44,1) Translator(1,1,45,1,comp) \
+                 Translator(1,1,46,0) Translator(1,1,47,0,comp) \
+                 Translator(2,1,02,2) Translator(2,1,03,2,comp) \
+                 Translator(2,1,04,1) Translator(2,1,05,1,comp) \
+                 Translator(2,1,06,0) Translator(2,1,07,0,comp) \
+                 Translator(3,1,08,0) Translator(3,1,10,0,comp) \
+                 Translator(3,1,09,0) Translator(3,1,11,0,comp) \
+                 Translator(3,1,15,1) \
+                 Translator(4,1,14,0)
+FixedData=A9 00 00 00 00 00
+DefaultCmd=00
 Code.HCS08=20 19 24 4B 61 CE 85 40 08 08 00 DD 00 00 00 00 00 DE 0D D3 05 2D 01 C3 04 CD 02 01 61 09 01 B3 06 B6 61 A8 F0 B7 61 03 61 06 55 7B 35 74 1D A4 B6 66 AE 08 CD FF 8C BF 66 B7 67 6E 02 A9 6E 06 AA CC FF 5F
 
 [Scientific Atlanta]
