--- a/protocols.ini
+++ b/protocols.ini
@@ -1069,6 +1069,44 @@ Windows registry change that disables debounce (to work with learned signals in 
 toggle bit isn't active).  The RC6 toggle bit is a different bit than the MCE toggle bit. \
 The RC6 toggle bit is always zero in MCE signals.
 
+[MCE]
+PID=01 2a
+VariantName=2
+DevParms=Device:7=4,OEM2:8=15
+DeviceTranslator=Translator(0,1,50,6) Translator(0,1,51,6,comp) \
+                 Translator(0,1,52,5) Translator(0,1,53,5,comp) \
+                 Translator(0,1,54,4) Translator(0,1,55,4,comp) \
+                 Translator(0,1,56,3) Translator(0,1,57,3,comp) \
+                 Translator(0,1,58,2) Translator(0,1,59,2,comp) \
+                 Translator(0,1,60,1) Translator(0,1,61,1,comp) \
+                 Translator(0,1,62,0) Translator(0,1,63,0,comp) \
+                 Translator(1,1,32,7) Translator(1,1,33,7,comp) \
+                 Translator(1,1,34,6) Translator(1,1,35,6,comp) \
+                 Translator(1,1,36,5) Translator(1,1,37,5,comp) \
+                 Translator(1,1,38,4) Translator(1,1,39,4,comp) \
+                 Translator(1,1,40,3) Translator(1,1,41,3,comp) \
+                 Translator(1,1,42,2) Translator(1,1,43,2,comp) \
+                 Translator(1,1,44,1) Translator(1,1,45,1,comp) \
+                 Translator(1,1,46,0) Translator(1,1,47,0,comp)
+FixedData=a9 32 95 55 00 00 40 00
+CmdParms=OBC
+CmdTranslator=Translator(0)
+DefaultCmd=00
+CmdIndex=0
+Code.HCS08=20 16 24 4B 81 CE 05 08 08 00 DD 00 00 00 00 00 DE D0 12 05 36 01 BB 04 01 B3 12 01 61 06 B6 61 A8 F0 B7 61 03 61 06 B6 66 A8 C0 B7 66 B6 68 AE 08 CD FF 8C BF 68 B7 69 6E 02 A9 6E 08 AA CC FF 5F
+Notes=MCE is a form of RC6-6-32\n\
+The correspondence between fields of MCE and fields of RC6-M-32 is:\n\
+. The RC6 M value is 6 because the protocol is RC6-6-32\n\
+. The RC6 Toggle bit is always zero in MCE\n\
+. The RC6 Device is the OEM1 field of MCE, which always has the value 128\n\
+. The RC6 Subdevice is the MCE Device plus 256 times the OEM2 plus 128 times the MCE toggle bit\n\
+for example in Microsoft MCE, device is 4 and OEM2 is 15, so the RC6-6-32 device is 128 and \
+subdevice is 4+256*15+(either 128 or 0) = either 3844 or 3972\n\n\
+The MCE toggle bit actively toggles when this protocol is used, so you do not need the \
+Windows registry change that disables debounce (to work with learned signals in which the \
+toggle bit isn't active).  The RC6 toggle bit is a different bit than the MCE toggle bit. \
+The RC6 toggle bit is always zero in MCE signals.
+
 [Mitsubishi]
 PID=00 14
 CmdTranslator=Translator(lsb,comp)
@@ -2042,6 +2080,59 @@ only one bit different between these values, bit 7.  Use the smaller of the \
 two values in the Sub-device field.\
 \n\nFor a MS Windows MCE remote, we have seen Device-128 and Sub-Device=3844/3972\
 \n\nFor a Dell Windows MCE remote, we have seen Device=128 and Sub-Device=7211/7339
+
+[RC6-M-32]
+PID=01 2a
+VariantName=2
+DevParms=Device:8=128,Sub-Device:16=3844,M:3=6,RC6 T-bit:0|1|toggle,MCE toggle:no|yes
+DeviceTranslator=Translator(0,1,16,7)  Translator(0,1,17,7,comp) \
+                 Translator(0,1,18,6)  Translator(0,1,19,6,comp) \
+                 Translator(0,1,20,5)  Translator(0,1,21,5,comp) \
+                 Translator(0,1,22,4)  Translator(0,1,23,4,comp) \
+                 Translator(0,1,24,3)  Translator(0,1,25,3,comp) \
+                 Translator(0,1,26,2)  Translator(0,1,27,2,comp) \
+                 Translator(0,1,28,1)  Translator(0,1,29,1,comp) \
+                 Translator(0,1,30,0)  Translator(0,1,31,0,comp) \
+                 Translator(1,1,32,15) Translator(1,1,33,15,comp) \
+                 Translator(1,1,34,14) Translator(1,1,35,14,comp) \
+                 Translator(1,1,36,13) Translator(1,1,37,13,comp) \
+                 Translator(1,1,38,12) Translator(1,1,39,12,comp) \
+                 Translator(1,1,40,11) Translator(1,1,41,11,comp) \
+                 Translator(1,1,42,10) Translator(1,1,43,10,comp) \
+                 Translator(1,1,44,9)  Translator(1,1,45,9,comp) \
+                 Translator(1,1,46,8)  Translator(1,1,47,8,comp) \
+                 Translator(1,1,48,7)  Translator(1,1,49,7,comp) \
+                 Translator(1,1,50,6)  Translator(1,1,51,6,comp) \
+                 Translator(1,1,52,5)  Translator(1,1,53,5,comp) \
+                 Translator(1,1,54,4)  Translator(1,1,55,4,comp) \
+                 Translator(1,1,56,3)  Translator(1,1,57,3,comp) \
+                 Translator(1,1,58,2)  Translator(1,1,59,2,comp) \
+                 Translator(1,1,60,1)  Translator(1,1,61,1,comp) \
+                 Translator(1,1,62,0)  Translator(1,1,63,0,comp) \
+                 Translator(2,1,02,2)  Translator(2,1,03,2,comp) \
+                 Translator(2,1,04,1)  Translator(2,1,05,1,comp) \
+                 Translator(2,1,06,0)  Translator(2,1,07,0,comp) \
+                 Translator(3,1,08,0)  Translator(3,1,10,0,comp) \
+                 Translator(3,1,09,0)  Translator(3,1,11,0,comp) \
+                 Translator(3,1,15,1)  \
+                 Translator(4,1,14,0)
+FixedData=80 00 00 00 00 00 00 00
+CmdParms=OBC
+CmdTranslator=Translator(0)
+DefaultCmd=00
+CmdIndex=0
+Code.HCS08=20 16 24 4B 81 CE 05 08 08 00 DD 00 00 00 00 00 DE D0 12 05 36 01 BB 04 01 B3 12 01 61 06 B6 61 A8 F0 B7 61 03 61 06 B6 66 A8 C0 B7 66 B6 68 AE 08 CD FF 8C BF 68 B7 69 6E 02 A9 6E 08 AA CC FF 5F
+Notes=This supports a family of potential protocols of which MCE is the only know example.\n\
+If you want an MCE signal, you're better off choosing MCE.\n\
+The correspondence between fields of MCE and fields of RC6-M-32 is:\n\
+. The RC6 M value is 6 in MCE\n\
+. The RC6 T-bit is always zero in MCE\n\
+. The RC6 Device is the OEM1 field of MCE, which always has the value 128\n\
+. The RC6 Subdevice is the MCE Device plus 256 times the MCE OEM2 plus 128 times the MCE T-bit\n\
+. MCE always toggles the MCE T-bit and never toggles the  RC6 T-bit.  This upgrade can toggle or not toggle each\
+ independently.  Note that the MCE T-bit is part of the RC6 Subdevice, so if you don't turn on MCE toggle that bit\
+ is determined by the Subdevice value.
+
 
 [RC6-M-20n]
 PID=00 20
