Use BitDoubler instead of many Translate bits for some of the RC6 entries that need it.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@640 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1073,21 +1073,7 @@ The RC6 toggle bit is always zero in MCE signals.
 PID=01 2a
 VariantName=2
 DevParms=Device:7=4,OEM2:8=15
-DeviceTranslator=Translator(0,1,50,6) Translator(0,1,51,6,comp) \
-                 Translator(0,1,52,5) Translator(0,1,53,5,comp) \
-                 Translator(0,1,54,4) Translator(0,1,55,4,comp) \
-                 Translator(0,1,56,3) Translator(0,1,57,3,comp) \
-                 Translator(0,1,58,2) Translator(0,1,59,2,comp) \
-                 Translator(0,1,60,1) Translator(0,1,61,1,comp) \
-                 Translator(0,1,62,0) Translator(0,1,63,0,comp) \
-                 Translator(1,1,32,7) Translator(1,1,33,7,comp) \
-                 Translator(1,1,34,6) Translator(1,1,35,6,comp) \
-                 Translator(1,1,36,5) Translator(1,1,37,5,comp) \
-                 Translator(1,1,38,4) Translator(1,1,39,4,comp) \
-                 Translator(1,1,40,3) Translator(1,1,41,3,comp) \
-                 Translator(1,1,42,2) Translator(1,1,43,2,comp) \
-                 Translator(1,1,44,1) Translator(1,1,45,1,comp) \
-                 Translator(1,1,46,0) Translator(1,1,47,0,comp)
+DeviceTranslator=BitDoubler(0,7,50) BitDoubler(1,8,32)
 FixedData=a9 32 95 55 00 00 40 00
 CmdParms=OBC
 CmdTranslator=Translator(0)
@@ -2098,33 +2084,9 @@ two values in the Sub-device field.\
 PID=01 2a
 VariantName=2
 DevParms=Device:8=128,Sub-Device:16=3844,M:3=6,RC6 T-bit:0|1|toggle,MCE toggle:no|yes
-DeviceTranslator=Translator(0,1,16,7)  Translator(0,1,17,7,comp) \
-                 Translator(0,1,18,6)  Translator(0,1,19,6,comp) \
-                 Translator(0,1,20,5)  Translator(0,1,21,5,comp) \
-                 Translator(0,1,22,4)  Translator(0,1,23,4,comp) \
-                 Translator(0,1,24,3)  Translator(0,1,25,3,comp) \
-                 Translator(0,1,26,2)  Translator(0,1,27,2,comp) \
-                 Translator(0,1,28,1)  Translator(0,1,29,1,comp) \
-                 Translator(0,1,30,0)  Translator(0,1,31,0,comp) \
-                 Translator(1,1,32,15) Translator(1,1,33,15,comp) \
-                 Translator(1,1,34,14) Translator(1,1,35,14,comp) \
-                 Translator(1,1,36,13) Translator(1,1,37,13,comp) \
-                 Translator(1,1,38,12) Translator(1,1,39,12,comp) \
-                 Translator(1,1,40,11) Translator(1,1,41,11,comp) \
-                 Translator(1,1,42,10) Translator(1,1,43,10,comp) \
-                 Translator(1,1,44,9)  Translator(1,1,45,9,comp) \
-                 Translator(1,1,46,8)  Translator(1,1,47,8,comp) \
-                 Translator(1,1,48,7)  Translator(1,1,49,7,comp) \
-                 Translator(1,1,50,6)  Translator(1,1,51,6,comp) \
-                 Translator(1,1,52,5)  Translator(1,1,53,5,comp) \
-                 Translator(1,1,54,4)  Translator(1,1,55,4,comp) \
-                 Translator(1,1,56,3)  Translator(1,1,57,3,comp) \
-                 Translator(1,1,58,2)  Translator(1,1,59,2,comp) \
-                 Translator(1,1,60,1)  Translator(1,1,61,1,comp) \
-                 Translator(1,1,62,0)  Translator(1,1,63,0,comp) \
-                 Translator(2,1,02,2)  Translator(2,1,03,2,comp) \
-                 Translator(2,1,04,1)  Translator(2,1,05,1,comp) \
-                 Translator(2,1,06,0)  Translator(2,1,07,0,comp) \
+DeviceTranslator=BitDoubler(0,8,16) \
+                 BitDoubler(1,16,32) \
+                 BitDoubler(2,3,2) \
                  Translator(3,1,08,0)  Translator(3,1,10,0,comp) \
                  Translator(3,1,09,0)  Translator(3,1,11,0,comp) \
                  Translator(3,1,15,1)  \
@@ -2157,21 +2119,11 @@ Notes=This protocol supports any RC6-M-20 variant where the toggle bit doesn't \
       or 12, and T is always 0.
 DevParms=M=6,Device,Sub Device,T
 FixedData=80 00 00 00 00 00
-DeviceTranslator=Translator(0,1,2,2) Translator(0,1,3,2,comp) \
-                 Translator(0,1,4,1) Translator(0,1,5,1,comp) \
-                 Translator(0,1,6,0) Translator(0,1,7,0,comp) \
-                 Translator(1,1,12,7) Translator(1,1,13,7,comp) \
-                 Translator(1,1,14,6) Translator(1,1,15,6,comp) \
-                 Translator(1,1,16,5) Translator(1,1,17,5,comp) \
-                 Translator(1,1,18,4) Translator(1,1,19,4,comp) \
-                 Translator(1,1,20,3) Translator(1,1,21,3,comp) \
-                 Translator(1,1,22,2) Translator(1,1,23,2,comp) \
-                 Translator(1,1,24,1) Translator(1,1,25,1,comp) \
-                 Translator(1,1,26,0) Translator(1,1,27,0,comp) \
+DeviceTranslator=BitDoubler(0,3,2) \
+                 BitDoubler(1,8,12) \
                  Translator(2,1,28,3) Translator(2,1,29,3,comp) \
                  Translator(2,1,30,2) Translator(2,1,31,2,comp) \
-                 Translator(2,1,36,1) Translator(2,1,37,1,comp) \
-                 Translator(2,1,38,0) Translator(2,1,39,0,comp) \
+                 BitDoubler(2,2,36) \
                  Translator(3,1,08,0) Translator(3,1,10,0,comp) \
                  Translator(3,1,09,0) Translator(3,1,11,0,comp)
 CmdParms=OBC=0
@@ -2208,25 +2160,15 @@ Notes=This protocol supports any RC6-M-24 variant where the toggle bit doesn't \
       this one will.
 DevParms=M=6,Device=1,Sub Device,T
 FixedData=80 00 00 00 00 00 00
-DeviceTranslator=Translator(0,1,2,2) Translator(0,1,3,2,comp) \
-                 Translator(0,1,4,1) Translator(0,1,5,1,comp) \
-                 Translator(0,1,6,0) Translator(0,1,7,0,comp) \
-                 Translator(1,1,12,7) Translator(1,1,13,7,comp) \
-                 Translator(1,1,14,6) Translator(1,1,15,6,comp) \
-                 Translator(1,1,16,5) Translator(1,1,17,5,comp) \
-                 Translator(1,1,18,4) Translator(1,1,19,4,comp) \
-                 Translator(1,1,20,3) Translator(1,1,21,3,comp) \
-                 Translator(1,1,22,2) Translator(1,1,23,2,comp) \
-                 Translator(1,1,24,1) Translator(1,1,25,1,comp) \
-                 Translator(1,1,26,0) Translator(1,1,27,0,comp) \
+DeviceTranslator=BitDoubler(0,3,2) \
+                 BitDoubler(1,8,12) \
+                 BitDoubler(2,2,44) \
                  Translator(2,1,28,7) Translator(2,1,29,7,comp) \
                  Translator(2,1,30,6) Translator(2,1,31,6,comp) \
                  Translator(2,1,32,5) Translator(2,1,33,5,comp) \
                  Translator(2,1,34,4) Translator(2,1,35,4,comp) \
                  Translator(2,1,36,3) Translator(2,1,37,3,comp) \
                  Translator(2,1,38,2) Translator(2,1,39,2,comp) \
-                 Translator(2,1,44,1) Translator(2,1,45,1,comp) \
-                 Translator(2,1,46,0) Translator(2,1,47,0,comp) \
                  Translator(3,1,08,0) Translator(3,1,10,0,comp) \
                  Translator(3,1,09,0) Translator(3,1,11,0,comp)
 CmdParms=OBC=0
