Added kludge for RC5/6 combo
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@641 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -2045,6 +2045,55 @@ Code.S3C80=47 93 41 8B 13 CE 05 08 08 00 DE 00 00 00 00 00 CC D0 52 05 35 01 A8 
 Code.6805-RC16/18=12 25 41 20 11 CE 05 08 08 00 6C 00 00 00 6F 68 00 00 20 92 E8 04 B6 5E AE 08 B7 50 BF 63 48 59 99 49 59 38 50 24 02 A8 03 3A 63 26 F1 BF 5E B7 5F 01 57 06 B6 5B A8 F0 B7 5B 34_66 A6 04 B7 DD CC 01 AF
 Code.HCS08=20 16 24 4B 41 CE 05 08 08 00 D9 00 00 00 00 00 DE CF EC 05 27 01 D1 04 B6 64 AE 08 CD FF 8C BF 64 B7 65 B6 61 01 B3 04 A8 F0 B7 61 6E 02 A9 6E 04 AA CC FF 5F
 
+[RC5/6 combo]
+PID=01 84
+DevParms=RC6 Dev 1:8=0,RC6 Dev 2:8=[0],RC6 Dev 3:8=[1]
+FixedData=95 30 00 00 00 00 00 00
+DeviceTranslator=BitDoubler(0,8,16) BitDoubler(1,8,32) BitDoubler(2,8,48)
+DefaultCmd=1F FC
+CmdParms=Type:RC5|RC6,5 Dev:7,5 OBC:7,6 Dev:Dev. 1|Dev. 2|Dev. 3|XXX,6 OBC:8
+CmdParmInit=PickInitializer(3,0,N1,N2)
+CmdTranslator=Translator(0,1,15) \
+              Translator(1,5,3,comp) \
+              Translator(1,1,0,6) \
+              Translator(1,1,2,5) \
+              Translator(2,6,8,comp) \
+              Translator(2,1,1,6) \
+              Translator(3,2,13) \
+              Translator(4,8,0)
+Notes=Combines up to three RC6 device codes with all RC5 device codes\n\
+      On the setup sheet enter the RC6 device codes\n\
+      On each row of the functions sheet select either RC5 or RC6\n\
+      If you select RC5 enter the device and OBC in the 5 dev and 5 OBC columns \
+      and ignore garbage in the 6 dev and 6 OBC columns.\n\
+      If you select RC6 select the device in the 6 dev column and enter the OBC \
+      in the 6 OBC column and ignore garbage in the 5 dev and 5 OBC columns.
+
+[RC5/6 combo]
+PID=01 84
+VariantName=old
+DevParms=RC6 Dev 1:8=0,RC6 Dev 2:8=[0]
+FixedData=95 30 00 00 00 00
+DeviceTranslator=BitDoubler(0,8,16) BitDoubler(1,8,32)
+DefaultCmd=1F FC
+CmdParms=Type:RC5|RC6,5 Dev:7,5 OBC:7,6 Dev:Dev. 1|Dev. 2,6 OBC:8
+CmdParmInit=PickInitializer(1,0,N1)
+CmdTranslator=Translator(0,1,15) \
+              Translator(1,5,3,comp) \
+              Translator(1,1,0,6) \
+              Translator(1,1,2,5) \
+              Translator(2,6,8,comp) \
+              Translator(2,1,1,6) \
+              Translator(3,1,14) \
+              Translator(4,8,0)
+Notes=Combines up to two RC6 device codes with all RC5 device codes\n\
+      On the setup sheet enter the RC6 device codes\n\
+      On each row of the functions sheet select either RC5 or RC6\n\
+      If you select RC5 enter the device and OBC in the 5 dev and 5 OBC columns \
+      and ignore garbage in the 6 dev and 6 OBC columns.\n\
+      If you select RC6 select the device in the 6 dev column and enter the OBC \
+      in the 6 OBC column and ignore garbage in the 5 dev and 5 OBC columns.
+
 [RC6-6-32]
 PID=01 2a
 DevParms=Device:8=128,Sub-Device:16=3844
