Changed my mind about variant naming
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@642 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -2047,6 +2047,7 @@ Code.HCS08=20 16 24 4B 41 CE 05 08 08 00 D9 00 00 00 00 00 DE CF EC 05 27 01 D1 
 
 [RC5/6 combo]
 PID=01 84
+VariantName=2
 DevParms=RC6 Dev 1:8=0,RC6 Dev 2:8=[0],RC6 Dev 3:8=[1]
 FixedData=95 30 00 00 00 00 00 00
 DeviceTranslator=BitDoubler(0,8,16) BitDoubler(1,8,32) BitDoubler(2,8,48)
@@ -2071,7 +2072,6 @@ Notes=Combines up to three RC6 device codes with all RC5 device codes\n\
 
 [RC5/6 combo]
 PID=01 84
-VariantName=old
 DevParms=RC6 Dev 1:8=0,RC6 Dev 2:8=[0]
 FixedData=95 30 00 00 00 00
 DeviceTranslator=BitDoubler(0,8,16) BitDoubler(1,8,32)
