Removed incorrect attempt to support the useless variant of 0184
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@643 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -2069,30 +2069,11 @@ Notes=Combines up to three RC6 device codes with all RC5 device codes\n\
       and ignore garbage in the 6 dev and 6 OBC columns.\n\
       If you select RC6 select the device in the 6 dev column and enter the OBC \
       in the 6 OBC column and ignore garbage in the 5 dev and 5 OBC columns.
-
-[RC5/6 combo]
-PID=01 84
-DevParms=RC6 Dev 1:8=0,RC6 Dev 2:8=[0]
-FixedData=95 30 00 00 00 00
-DeviceTranslator=BitDoubler(0,8,16) BitDoubler(1,8,32)
-DefaultCmd=1F FC
-CmdParms=Type:RC5|RC6,5 Dev:7,5 OBC:7,6 Dev:Dev. 1|Dev. 2,6 OBC:8
-CmdParmInit=PickInitializer(1,0,N1)
-CmdTranslator=Translator(0,1,15) \
-              Translator(1,5,3,comp) \
-              Translator(1,1,0,6) \
-              Translator(1,1,2,5) \
-              Translator(2,6,8,comp) \
-              Translator(2,1,1,6) \
-              Translator(3,1,14) \
-              Translator(4,8,0)
-Notes=Combines up to two RC6 device codes with all RC5 device codes\n\
-      On the setup sheet enter the RC6 device codes\n\
-      On each row of the functions sheet select either RC5 or RC6\n\
-      If you select RC5 enter the device and OBC in the 5 dev and 5 OBC columns \
-      and ignore garbage in the 6 dev and 6 OBC columns.\n\
-      If you select RC6 select the device in the 6 dev column and enter the OBC \
-      in the 6 OBC column and ignore garbage in the 5 dev and 5 OBC columns.
+Code.S3C80=47 93 82 8B 16 88 81 10 08 08 01 BC 01 A8 01 BC 01 A8 AB CC 05 35 01 A8 04 00 06 08 0C 37 01 0F \
+           68 0B 76 00 01 6B 05 B6 C6 20 69 0B 8D 01 49 E6 28 8E E6 29 05 B0 2A B0 C7 2C 14 C6 C0 FF 82 4C \
+           0A E3 50 D7 25 2E 4A F9 68 0C 56 C6 06 87 06 05 87 16 06 09 05 19 06 E4 0B 07 68 07 2C 08 CF 10 \
+           08 10 07 DF 10 08 10 07 90 C6 FB 03 B6 08 03 2A ED 76 00 01 6B 03 B6 04 F0 E6 10 02 E6 11 04 8D \
+           01 49 00 DE 00 00 00 00 00 CC A3 91 
 
 [RC6-6-32]
 PID=01 2a
