--- a/protocols.ini
+++ b/protocols.ini
@@ -2247,6 +2247,17 @@ CmdIndex=1
 Code.S3C80=28 60 02 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 E0 0F 8C 07 D0 07 BC 20 10 8D 01 46
 Code.740=07 0C 02 80 0E F4 72 1D 04 08 03 87 02 3A 08 E8 E4 06 27 E6 69 4C 00 FF
 Code.6805-RC16/18=0A 19 02 20 10 95 45 04 08 01 7C F4 00 7C FA 07 D0 00 33 E7 E8 3C_66 CC 01 AF
+
+[RCA Combo (Official)]
+OldNames=RCA Combo
+PID=01 14
+VariantName=2
+FixedData=00 00
+CmdTranslator=Translator(0,4,0,comp) Translator(1,8,8,comp)
+CmdParms=Device=0:4,OBC=0
+Notes=official version
+DefaultCmd=00 00
+CmdIndex=1
 Code.HCS08=20 15 17 2F 22 95 45 04 08 00 F9 01 F4 00 F9 03 E8 0F A0 07 CF 07 D0 6E 02 AC 3C A9 01 62 20 11 A3 4E 63 69 B6 60 03 62 02 B6 61 B7 63 CD FF 5F 6E 03 56 45 9E 2D CD FF 74 3B 56 F7 4E 69 63 CC FF 5F
 
 [RCA Combo (w/Duration)]
